--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Nomads</title>
 </head>
 <body>
-  <h1>An example of some html</h1>
+  <h1>somethingelse</h1>
   <h2>Headings and paragraphs (this is an h2 heading)</h2>
 
 <p> </p>
