--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <link rel ="stylesheet" type="text/css" href = "Style.css" />
   <title>Nomads</title>
 </head>
 <body>
   <h1>traveller</h1>
+
   <h2>Headings and paragraphs (this is an h2 heading)</h2>
 
 <p> </p>
